log/2021-05-11T00:21:26+0800.log
Autotest: Begin at 2021年 05月 11日 星期二 00:21:26 CST
[32m[ found your pageReplace.cpp ][0m
pageReplace.cpp:77:14: error: register name not specified for 'point'
 register int point;
              ^
pageReplace.cpp:78:14: error: register name not specified for 'cur_filled_num'
 register int cur_filled_num;
              ^
make: *** [main] Error 1
[31m[01m[ compile error ][0m
[33m[01m[ You got 0 (of 100) this time. 2021年 05月 11日 星期二 00:21:30 CST ][0m
